lore-parser/src/snapshots/lore_parser__parser__tests__parse_kind_with_fields_empty.snap
---
source: lore-parser/src/parser.rs
expression: snapshot

---

input:
     kind Name {} 

output:

Ok(
    Structure {
        items: [
            Kind {
                name: Alias(
                    "Name",
                ),
                fields: [],
            },
        ],
    },
)

