lore-parser/src/snapshots/lore_parser__parser__tests__parse_kind_with_missing_name.snap
---
source: lore-parser/src/parser.rs
expression: snapshot

---

input:
    kind

output:

Err(
    ParseError {
        src: NamedSource {
            name: "$name",
            source: "<redacted>",
        ,
        span: SourceSpan {
            offset: SourceOffset(
                4,
            ),
            length: SourceOffset(
                0,
            ),
        },
        filename: "$name",
        error: KindIsMissingAName,
    },
)

