lore-parser/src/snapshots/lore_parser__parser__tests__parse_kind_with_uri_name.snap
---
source: lore-parser/src/parser.rs
expression: snapshot

---

input:
    kind spotify:kind:artist

output:

Ok(
    Structure {
        items: [
            Kind {
                name: URI(
                    URI(
                        "spotify:kind:artist",
                    ),
                ),
            },
        ],
    },
)

