lore-parser/src/snapshots/lore_parser__parser__tests__parse_rel_complete_with_3_parts_aliased.snap
---
source: lore-parser/src/parser.rs
expression: snapshot

---

input:
    rel Artist has Name

output:

Ok(
    Structure {
        items: [
            Relation {
                subject: Alias(
                    "Artist",
                ),
                predicate: Alias(
                    "has",
                ),
                object: Alias(
                    "Name",
                ),
            },
        ],
    },
)

