lore-parser/src/snapshots/lore_parser__parser__tests__parse_rel_incomplete_with_1_part.snap
---
source: lore-parser/src/parser.rs
expression: snapshot

---

input:
    rel spotify:kinds/Artist

output:

Err(
    ParseError {
        src: NamedSource {
            name: "$name",
            source: "<redacted>",
        ,
        span: SourceSpan {
            offset: SourceOffset(
                24,
            ),
            length: SourceOffset(
                0,
            ),
        },
        filename: "$name",
        error: RelationExpectedPredicateToBeName,
    },
)

