lore-parser/src/snapshots/lore_parser__parser__tests__parse_rel_incomplete_with_1_part_aliased.snap
---
source: lore-parser/src/parser.rs
expression: snapshot

---

input:
    rel Artist

output:

Err(
    RelationExpectedPredicateToBeName,
)

