lore-parser/src/snapshots/lore_parser__parser__tests__parse_rel_incomplete_with_2_parts.snap
---
source: lore-parser/src/parser.rs
expression: snapshot

---

input:
    rel spotify:kinds/Artist spotify:rels/has

output:

Err(
    RelationExpectedObjectToBeName,
)

