lore-parser/src/snapshots/lore_parser__parser__tests__parse_rel_incomplete_with_2_parts_aliased.snap
---
source: lore-parser/src/parser.rs
expression: snapshot

---

input:
    rel Artist has

output:

Err(
    ParseError {
        src: NamedSource {
            name: "$name",
            source: "<redacted>",
        ,
        span: SourceSpan {
            offset: SourceOffset(
                14,
            ),
            length: SourceOffset(
                0,
            ),
        },
        filename: "$name",
        error: RelationExpectedObjectToBeName,
    },
)

